fixed spacing of the nav bar
the spacing between testing data, school work portfolio, and more was
increased.  minor spelling and grammatical errors corrected

--- a/stylesheets/my_stylesheet.css
+++ b/stylesheets/my_stylesheet.css
@@ -1,34 +1,68 @@
 .my_text_link {
+
 color:white;
-margin-right:10px;
+
+margin-right:1%;
+
+padding: 0 10px;
 }
+
 .my_menu_link {
+
 color:rgb(256,256,256);
+
 }
+
 .my_menu_link_b {
+
 color:rgb(0,0,0);
+
 }
+
 .my_text_body {
+
 font-family:"Verdona";
+
 }
+
 .dropdown {
+
 position:relative;
+
 display:inline-block;
+
 }
+
 .dropdown-content {
+
 display:none;
+
 position:absolute;
+
 background-color:rgb(50,50,50);
+
 min-width:160px;
+
 box-shadow:0px 8px 16px 0px rgba(0,0,0,0.2);
+
 padding:12px 32px;
+
 z-index:1;
+
 }
+
 .dropdown:hover .dropdown-content {
+
 display:block;
+
 }
+
 .image0 {
+
 width:40%;
+
 height:40%;
+
 float:right;
+
 }
